test_yuriiq/catalog/language/english/account/login.php
<?php

// text
$_['text_register_account']	= 'By creating an account you will be able to shop faster, be up to date on an order\';
$_['text_account']	= 'Account';
$_['text_i_am_returning_customer']	= 'I am a returning customer';
$_['text_login']	= 'Login';
$_['text_returning_customer']	= 'Returning Customer';
$_['text_forgotten']	= 'Forgotten Password';
$_['text_new_customer']	= 'New Customer';
$_['text_register']	= 'Register Account';

// error
$_['error_approved']	= 'Warning: Your account requires approval before you can login.';
$_['error_login']	= 'Warning: No match for E-Mail Address and/or Password.';

// entry
$_['entry_password']	= 'Password:';
$_['entry_email']	= 'E-Mail Address:';

// heading
$_['heading_title']	= 'Account Login';
?>